--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,26 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node dist/index.ts",
-        "dev": "ts-node-dev src/index.ts",
-        "build": "tsc -p ."
+        "start": "node dist/index.js",
+        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.2"
+        "body-parser": "^1.19.1",
+        "cors": "^2.8.5",
+        "express": "^4.17.2",
+        "mongoose": "^6.1.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^17.0.0",
         "ts-node": "^10.4.0",
         "ts-node-dev": "^1.1.8"
